--- a/pom.xml
+++ b/pom.xml
@@ -71,5 +71,12 @@
           <artifactId>poi-ooxml</artifactId>
           <version>5.5.1</version>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
+      <dependency>
+          <groupId>org.assertj</groupId>
+          <artifactId>assertj-core</artifactId>
+          <version>3.27.6</version>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
 </project>
